--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "pokedex",
   "version": "1.0.0",
-  "description": "",
+  "description": "React pokedex test",
   "main": "index.js",
   "scripts": {
-    "start": "node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
-  "author": "",
+  "author": "Georgia Catarina",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.18.0",
