--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets" : ["es2015", "stage-2", "react"],
-  "plugins" : ["add-module-exports","transform-runtime"]
+  "presets" : ["es2015", "react"]
 }
