--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "eslint": "^3.9.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.21.0",
+    "url-parse": "^1.4.3",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.3",
     "history": "4.7.2",
+    "macaddress": "^0.2.9",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^4.2.0",
